[tool.poetry]
name = "twitter_remove_strangers"
version = "0.1.0"
description = ""
authors = ["AmirSina Homayooni <sinahomayooni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.10.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
twitter_remove_strangers = "twitter_remove_strangers.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
